src/test/resources/should-fail/insufficient-banks.se
decl a: float[1024 bank 16]; 
decl c: float[1024 bank 16];

for (let i = 0..1024) unroll 32 {
  c[i] := a[i];
}
